--- a/src/.env
+++ b/src/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:z1G3XrRqwHbqaNx6/huqsIKzm3XARO1YWArXx9peuxo=
 APP_DEBUG=true
 APP_URL=http://localhost
 
